--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
+    <link
+      id="favicon"
+      rel="icon"
+      href="./src/assets/Logo_images/Logo.png"
+      type="image/png"
+    />
 
-    <title>Vite + React</title>
+    <title>Portify</title>
   </head>
   <body class="bg-color-body">
     <div id="root"></div>
